--- a/trade-service-api/package.json
+++ b/trade-service-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || set NODE_ENV=\"test\" && echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "amqplib": "^0.5.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.6"
   }
