--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./api/subscriber",
+    "start": "node ./api/server.js",
     "start-watch": "nodemon --exec \"npm start\""
   },
   "keywords": [],
