--- a/market-data-stream-service/package.json
+++ b/market-data-stream-service/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server.js",
-    "start-watch" :"nodemon --exec \"npm start\""
+    "start": "node server.js",
+    "start-watch": "nodemon --exec \"npm start\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.0-rc0",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "superagent": "^3.8.1"
   }
 }
