--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.js --hot --inline --open",
+    "start": "webpack-dev-server --config config/webpack.config.js --hot --inline",
     "build": "webpack --config config/webpack.prod.config.js",
     "test": "jest",
     "test-coverage": "jest --coverage"
@@ -14,15 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
-    "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -31,11 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
-    "jest": "^21.2.1",
-    "react-test-renderer": "^16.1.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   }
 }
