--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
+    "material-ui": "^1.0.0-beta.22",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -25,7 +26,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
