--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "material-ui": "^1.0.0-beta.22",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
