--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,8 +1,15 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express-gateway": "^1.4.1"
+    "express": "^4.16.2"
   }
 }
