--- a/trade-service-api/package.json
+++ b/trade-service-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "express": "^4.16.2",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "superagent": "^3.8.2"
   }
 }
