--- a/react-app/package.json
+++ b/react-app/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^4.2.2",
     "react-swipeable-views": "^0.12.12",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
