--- a/api-gateway/config/config.json
+++ b/api-gateway/config/config.json
@@ -1,10 +1,10 @@
 {
     "test":{
         "PORT":3020,
-        "SERVICE_REGISTRY_ENDPOINT":"http://localhost:3010/registry/"
+        "SERVICE_REGISTRY_ENDPOINT":"http://localhost:3010/registry"
     },
     "development":{
         "PORT":3020,
-        "SERVICE_REGISTRY_ENDPOINT":"http://localhost:3010/registry/"   
+        "SERVICE_REGISTRY_ENDPOINT":"http://localhost:3010/registry"   
     }
 }
