--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -2,7 +2,7 @@
   "name": "api-gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "run.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon bin/run.js",
     "test": "export NODE_ENV=test || set NODE_ENV=\"test\" && echo \"Error: no test specified\" && exit 1"
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "superagent": "^3.8.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.5"
+    "request": "^2.83.0"
   }
 }
