--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -14,5 +14,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "request": "^2.83.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
   }
 }
