--- a/ref-data-service/package.json
+++ b/ref-data-service/package.json
@@ -7,15 +7,11 @@
     "start-watch": "nodemon --exec \"npm start\""
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
     "express": "~4.15.5",
+    "body-parser": "~1.18.2",
     "hbs": "~4.0.1",
     "lodash": "^4.17.4",
-    "mongodb": "^2.2.33",
     "mongoose": "^4.13.6",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "eureka-js-client": "^4.3.0"
   }
 }
