--- a/market-data-stream-service/package.json
+++ b/market-data-stream-service/package.json
@@ -2,7 +2,7 @@
   "name": "market-data-stream-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -14,8 +14,10 @@
   "dependencies": {
     "express": "^4.16.2",
     "lodash": "^4.17.4",
-    "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.6",
-    "superagent": "^3.8.1"
+    "eureka-js-client": "^4.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.13.3"
   }
 }
