added properties in config.json files

--- a/market-data-stream-service/config/config.json
+++ b/market-data-stream-service/config/config.json
@@ -1,10 +1,11 @@
 {
     "test":{
-
+        "PORT" : 3000,
+        "MONGODB_URI" : "mongodb://localhost:27017/MarketTestData"
     },
     "development":{
         "PORT": 3000,
         "EUREKA_SERVER_HOST":"localhost",
-        "MONGODB_URI": "mongodb://localhost:27017/MarketDataServiceAPI"
+        "MONGODB_URI": "mongodb://localhost:27017/MarketsData"
     }
 }
