Front end app added

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,32 +1,40 @@
 {
   "name": "react-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.js --hot --inline",
-    "build": "webpack --config config/webpack.prod.config.js",
-    "test": "jest",
-    "test-coverage": "jest --coverage"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "jquery": "^3.2.1",
-    "material-ui": "^1.0.0-beta.22",
+    "jsdom-global": "^3.0.2",
+    "lodash": "^4.17.4",
+    "material-ui": "^1.0.0-beta.21",
     "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-next": "^1.0.0-beta.20",
+    "moment": "^2.19.2",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^16.0.0",
+    "react-number-format": "^3.0.2",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-swipeable-views": "^0.12.12",
+    "react-swipeable-views": "^0.12.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "serve-favicon": "^2.4.5"
+    "socket.io-client": "^2.0.4",
+    "typeface-roboto": "0.0.45",
+    "whatwg-fetch": "^2.0.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "react-scripts": "1.0.17",
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
