--- a/zuul-api-gateway/pom.xml
+++ b/zuul-api-gateway/pom.xml
@@ -38,6 +38,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-javanica</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
