--- a/market-data-stream-service/package.json
+++ b/market-data-stream-service/package.json
@@ -5,17 +5,30 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node ./bin/www",
     "start-watch": "nodemon --exec \"npm start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
+    "amqp": "*",
+    "amqplib": "^0.5.2",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "hbs": "~4.0.1",
+    "jackrabbit": "^4.3.0",
     "lodash": "^4.17.4",
-    "mongoose": "^4.13.6",
-    "eureka-js-client": "^4.3.0"
+    "moment": "^2.19.3",
+    "morgan": "~1.9.0",
+    "node-fetch": "^1.7.3",
+    "random-number": "0.0.9",
+    "serve-favicon": "~2.4.5",
+    "superagent": "^3.8.1",
+    "whatwg-fetch": "^2.0.3",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.13.3"
