--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -5,18 +5,20 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./api/server.js",
+    "start": "node ./bin/www",
     "start-watch": "nodemon --exec \"npm start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqp": "*",
     "amqplib": "^0.5.2",
     "express": "^4.16.2",
-    "lodash": "^4.17.4",
-    "mongoose": "^4.13.6",
-    "socket.io": "^2.0.4",
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^2.0.4",
+    "superagent": "^3.8.1",
     "eureka-js-client": "^4.3.0"
   }
 }
