--- a/trade-service-api/package.json
+++ b/trade-service-api/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "export NODE_ENV=test || set NODE_ENV=\"test\" && echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || set NODE_ENV=test && mocha api/**/*.test.js"
+  },
+  "engines": {
+    "node": "8.9.1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "mongodb": "^3.0.1",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   },
   "dependencies": {
     "express": "^4.16.2",
