--- a/ref-data-service/package.json
+++ b/ref-data-service/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-watch": "nodemon --exec \"npm start\""
+    "start-watch": "nodemon --exec \"npm start\"",
+    "test": "export NODE_ENV=test || set NODE_ENV=test && mocha tests/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "dependencies": {
     "express": "~4.15.5",
@@ -13,5 +15,11 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
     "eureka-js-client": "^4.3.0"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
