--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.0.2",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "jquery": "^3.2.1",
